src/objects/SystemObject__c.object
<CustomObject>
    <description>Data Dictionary Tool:  Objects can be either SFDC or External</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Snapshot_Date__c</fullName>
        <label>Last Snapshot Date</label>
        <summarizedField>ObjectField__c.LastSnapshot_Date__c</summarizedField>
        <summaryForeignKey>ObjectField__c.SystemObject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFields__c</fullName>
        <label>TotalFields</label>
        <summaryForeignKey>ObjectField__c.SystemObject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Objects</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TotalFields__c</columns>
        <columns>Last_Snapshot_Date__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SystemObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects</pluralLabel>
    <recordTypes>
        <fullName>SFDC</fullName>
        <active>true</active>
        <description>Used for all SFDC object</description>
        <label>SFDC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>